@@ -1,11 +1,11 @@
 Changes
 examples/check.pl
-examples/test.pl
 lib/WWW/ProxyChecker.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
-p5-www-proxychecker.iml
 README
 README.md
-t/00-load.t
+t/00-critic.t
+t/01-load.t
+t/02-check.t
