@@ -26,3 +26,4 @@ pm_to_blib$
 .travis.yml$
 build/
 ^\w+.list$
+.iml$
