@@ -2,6 +2,7 @@ Revision history for WWW-ProxyChecker
 
 1.004   2016-02-07
         - fixed MANIFEST
+        - added t/02-check.t
 
 1.003   2016-02-07
         - distribution adopted by Steve Bertrand (STEVEB) on
